--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -24,7 +24,7 @@ renderBufHeight: 1080
 # 0 for egl, 1 for opencv
 renderMode: 1
 
-num_images: 2
+num_images: 4
 
 USED_CAMERA_NUM: 4
 # netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs1.rt"
@@ -35,7 +35,7 @@ netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs4.rt"
 camcfgpath: "../cfg/390camcfg/"
 # camcfgpath: "/home/nvidia/ssd/code/Img-Stitching/cfg/390camcfg/"
 canname: "can0" 
-camDispIdx: "4"
+camDispIdx: "a"
 
 loglvl: "debug"
 
