--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -1,5 +1,6 @@
 # camera vendor, 0:sensing, 1:lijing
-vendor: 0
+vendor: "sensing"
+sensor: "imx390"
 # camsrc is the origin size of camera, can only be 3840x2160(for imx424b) or 1920x1080(for imx390)
 camsrcwidth: 1920
 camsrcheight: 1080
@@ -8,11 +9,15 @@ camsrcheight: 1080
 distorWidth: 1920
 distorHeight: 1080
 # undistor size can only be 960x540 or 1920x1080
-undistor: true
+undistor: false
 undistorWidth: 960
 undistorHeight: 540
-stitcherinputWidth: 960
-stitcherinputHeight: 540
+outPutWidth: 960
+outPutHeight: 540
+fov: 120
+
+# camera params path
+cameraparams: "../cfg/cameras.yaml"
 
 # parameters for renderer
 renderWidth: 1920
@@ -22,11 +27,11 @@ renderY: 0
 renderBufWidth: 1920
 renderBufHeight: 1080
 # 0 for egl, 1 for opencv
-renderMode: 1
+renderMode: 0
 
 num_images: 4
 
-USED_CAMERA_NUM: 4
+USED_CAMERA_NUM: 1
 # netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs1.rt"
 # netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs1_new.rt"
 netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs4.rt"
