--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -1,5 +1,5 @@
 # camera vendor, 0:sensing, 1:lijing
-vendor: "sensing"
+vendor: "lijing"
 sensor: "imx390"
 # camsrc is the origin size of camera, can only be 3840x2160(for imx424b) or 1920x1080(for imx390)
 camsrcwidth: 1920
@@ -12,9 +12,11 @@ distorHeight: 1080
 undistor: true
 undistorWidth: 960
 undistorHeight: 540
-outPutWidth: 800 # 800 # 720 #640
-outPutHeight: 450 # 450 # 405 #360
+outPutWidth: 640 # 800 # 720 #640
+outPutHeight: 360 # 450 # 405 #360
 fov: 120
+
+imgcut: 40
 
 # camera params path
 cameraparams: "../cfg/cameras.yaml"
@@ -27,7 +29,7 @@ renderY: 0
 renderBufWidth: 1920
 renderBufHeight: 1080
 # 0 for egl, 1 for opencv
-renderMode: 1
+renderMode: 0
 
 num_images: 4
 
