4cam presque ok

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,14 @@ set(LIB_PANO_PATCH 0)
 
 set(NVINFER_VERSION 7)
 
-set(BUILD_testocv ON CACHE BOOL "build testocv" FORCE)
+set(BUILD_testocv OFF CACHE BOOL "build testocv" FORCE)
 set(BUILD_cameracuda OFF CACHE BOOL "build nvidia camera v4l2 cuda" FORCE)
 set(BUILD_master ON CACHE BOOL "build master, dev app for 8 cams panorama" FORCE)
 set(BUILD_master2 OFF CACHE BOOL "build master2, dev app for 2 cams panorama" FORCE)
 set(BUILD_replay OFF CACHE BOOL "build replay, debug app for 8 cams panorama" FORCE)
 set(BUILD_replay2 OFF CACHE BOOL "build replay2, debug app for 2 cams panorama" FORCE)
 set(BUILD_camshow OFF CACHE BOOL "build camshow, 8 camera disp app" FORCE)
-set(BUILD_camshow4cam ON CACHE BOOL "build camshow4cam, 4 camera disp app" FORCE)
+set(BUILD_camshow4cam OFF CACHE BOOL "build camshow4cam, 4 camera disp app" FORCE)
 set(BUILD_camshow_2 OFF CACHE BOOL "build camshow-2, 2 camera disp app" FORCE)
 set(BUILD_panocam OFF CACHE BOOL "build panocam, panorama so" FORCE)
 set(BUILD_demo OFF CACHE BOOL "build demo, panorama so test app" FORCE)
@@ -172,6 +172,7 @@ if(BUILD_testocv)
     -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
     ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
     -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+    -lboost_system -lboost_random -lboost_thread -lpthread
     )
     # target_link_libraries(testocv  -lyaml-cpp ${OPENGL_LIBRARY} ${OpenCV_LIBS} )
 endif()
@@ -271,6 +272,7 @@ if(BUILD_camshow4cam)
     ${CUDA_LIBRARIES} ${GLUT_LIBRARY}
     ${OpenCV_LIBS}
     -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+    -lboost_system -lboost_random -lboost_thread -lpthread
     )
 endif()
     
