--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -1,7 +1,7 @@
 # camera vendor, 0:sensing, 1:lijing
 vendor: lijing
 sensor: imx390
-sttype: 4cam-black
+sttype: 4cam-silver
 # camsrc is the origin size of camera, can only be 3840x2160(for imx424b) or 1920x1080(for imx390)
 camsrcwidth: 1920
 camsrcheight: 1080
@@ -30,7 +30,7 @@ renderY: 0
 renderBufWidth: 1280
 renderBufHeight: 720
 # 0 for egl, 1 for opencv(deprecated), 2 for no display
-renderMode: 1
+renderMode: 2
 
 num_images: 2
 
@@ -63,4 +63,4 @@ batchSize: 1
 # websocket dst url
 # websocketurl: "ws://192.168.168.171:9002" # "ws://localhost:9002"
 websocketurl: "ws://localhost:9002"
-websocketOn: false
+websocketOn: true
