--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -30,7 +30,7 @@ renderY: 0
 renderBufWidth: 1280
 renderBufHeight: 720
 # 0 for egl, 1 for opencv(deprecated), 2 for no display
-renderMode: 2
+renderMode: 0
 
 num_images: 2
 
@@ -51,11 +51,11 @@ loglvl: "debug"
 stitcherMatchConf: 0.3
 stitcherAdjusterConf: 0.7
 stitcherBlenderStrength: 1
-stitcherCameraExThres: 30e3
-stitcherCameraInThres: 100e3
+stitcherCameraExThres: 30
+stitcherCameraInThres: 500
 
 # init mode, 1:initall, 2:use default, init seam, 3:read cfg, init seam
-initMode: 2
+initMode: 1
 
 # parameters for detector
 batchSize: 1
@@ -64,3 +64,4 @@ batchSize: 1
 # websocketurl: "ws://192.168.168.171:9002" # "ws://localhost:9002"
 websocketurl: "ws://localhost:9002"
 websocketOn: true
+websocketPort: 9002
