--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -1,7 +1,7 @@
 # camera vendor, 0:sensing, 1:lijing
 vendor: lijing
 sensor: imx390
-sttype: 4cam-silver
+sttype: 4cam-black
 # camsrc is the origin size of camera, can only be 3840x2160(for imx424b) or 1920x1080(for imx390)
 camsrcwidth: 1920
 camsrcheight: 1080
@@ -20,7 +20,7 @@ fov: 120
 imgcut: 40
 
 # camera params path
-cameraparams: "../cfg/cameras.yaml"
+cameraparams: "/home/nx/code/release/cameras.yaml"
 
 # parameters for renderer
 renderWidth: 1280
@@ -30,22 +30,18 @@ renderY: 0
 renderBufWidth: 1280
 renderBufHeight: 720
 # 0 for egl, 1 for opencv(deprecated), 2 for no display
-renderMode: 0
+renderMode: 2
 
 num_images: 2
 
 USED_CAMERA_NUM: 4
-# netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs1.rt"
-# netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs1_new.rt"
-netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs4.rt"
-# netpath: "/home/nvidia/ssd/model/yolo4tiny_fp16.rt"
-# netpath: "/home/nvidia/ssd/model/yolo4_kitti_fp16_bs4.rt"
+netpath: "/home/nx/code/release/xjtu_detNN.rt"
 camcfgpath: "../cfg/390camcfg/"
 # camcfgpath: "/home/nvidia/ssd/code/Img-Stitching/cfg/390camcfg/"
 canname: "can0" 
 camDispIdx: "a"
 
-loglvl: "debug"
+loglvl: "info"
 
 # parameters for stitcher
 stitcherMatchConf: 0.3
@@ -55,7 +51,7 @@ stitcherCameraExThres: 30
 stitcherCameraInThres: 500
 
 # init mode, 1:initall, 2:use default, init seam, 3:read cfg, init seam
-initMode: 1
+initMode: 2
 
 # parameters for detector
 batchSize: 1
