--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -1,7 +1,7 @@
 # camera vendor, 0:sensing, 1:lijing
 vendor: lijing
 sensor: imx390
-sttype: 4cam-black
+sttype: default
 # camsrc is the origin size of camera, can only be 3840x2160(for imx424b) or 1920x1080(for imx390)
 camsrcwidth: 1920
 camsrcheight: 1080
@@ -15,43 +15,43 @@ undistorWidth: 960
 undistorHeight: 540
 outPutWidth: 960 # 800 # 720 #640
 outPutHeight: 540 # 450 # 405 #360
-fov: 120
+fov: 60
 
 imgcut: 40
 
 # camera params path
-cameraparams: "/home/nx/code/release/cameras.yaml"
+cameraparams: "/home/nvidia/ssd/code/Img-Stitching/cfg/cameras.yaml"
 
 # parameters for renderer
 renderWidth: 1280
 renderHeight: 720
 renderX: 0
 renderY: 0
-renderBufWidth: 1280
-renderBufHeight: 720
+renderBufWidth: 1920
+renderBufHeight: 1080
 # 0 for egl, 1 for opencv(deprecated), 2 for no display
-renderMode: 2
+renderMode: 1
 
 num_images: 2
 
 USED_CAMERA_NUM: 4
-netpath: "/home/nx/code/release/xjtu_detNN.rt"
+netpath: "/home/nvidia/ssd/model/yolo4_berkeley_fp16_bs4.rt"
 camcfgpath: "../cfg/390camcfg/"
 # camcfgpath: "/home/nvidia/ssd/code/Img-Stitching/cfg/390camcfg/"
 canname: "can0" 
 camDispIdx: "a"
 
-loglvl: "info"
+loglvl: "debug"
 
 # parameters for stitcher
 stitcherMatchConf: 0.3
 stitcherAdjusterConf: 0.7
 stitcherBlenderStrength: 1
-stitcherCameraExThres: 30
-stitcherCameraInThres: 500
+stitcherCameraExThres: 30e2
+stitcherCameraInThres: 500e2
 
 # init mode, 1:initall, 2:use default, init seam, 3:read cfg, init seam
-initMode: 2
+initMode: 1
 
 # parameters for detector
 batchSize: 1
@@ -59,5 +59,5 @@ batchSize: 1
 # websocket dst url
 # websocketurl: "ws://192.168.168.171:9002" # "ws://localhost:9002"
 websocketurl: "ws://localhost:9002"
-websocketOn: true
+websocketOn: false
 websocketPort: 9002
