--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -1,7 +1,7 @@
 # camera vendor, 0:sensing, 1:lijing
 vendor: lijing
 sensor: imx390
-sttype: default
+sttype: 4cam-silver
 # camsrc is the origin size of camera, can only be 3840x2160(for imx424b) or 1920x1080(for imx390)
 camsrcwidth: 1920
 camsrcheight: 1080
@@ -15,7 +15,7 @@ undistorWidth: 960
 undistorHeight: 540
 outPutWidth: 960 # 800 # 720 #640
 outPutHeight: 540 # 450 # 405 #360
-fov: 60
+fov: 120
 
 imgcut: 40
 
@@ -23,14 +23,14 @@ imgcut: 40
 cameraparams: "/home/nvidia/ssd/code/Img-Stitching/cfg/cameras.yaml"
 
 # parameters for renderer
-renderWidth: 1280
-renderHeight: 720
+renderWidth: 10
+renderHeight: 10
 renderX: 0
 renderY: 0
 renderBufWidth: 1920
 renderBufHeight: 1080
 # 0 for egl, 1 for opencv(deprecated), 2 for no display
-renderMode: 1
+renderMode: 0
 
 num_images: 2
 
