--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -23,8 +23,8 @@ imgcut: 40
 cameraparams: "/home/nvidia/ssd/code/Img-Stitching/cfg/cameras.yaml"
 
 # parameters for renderer
-renderWidth: 960
-renderHeight: 540
+renderWidth: 10
+renderHeight: 10
 renderX: 0
 renderY: 0
 renderBufWidth: 1920
@@ -59,7 +59,7 @@ batchSize: 1
 # websocket dst url
 # websocketurl: "ws://192.168.168.171:9002" # "ws://localhost:9002"
 websocketurl: "ws://localhost:9002"
-websocketOn: false
+websocketOn: true
 websocketPort: 9002
 
 # detection
